--- a/create_user/Dockerfile
+++ b/create_user/Dockerfile
@@ -1,10 +1,8 @@
 FROM python:3.7
 ADD . /tmp
 WORKDIR /app
-COPY requirment.txt requirment.txt
-RUN pip install -r requirment.txt
 
-COPY flaskapp.py flaskapp.py
-COPY publisher.py publisher.py
+COPY . .
+RUN pip install -r requirements.txt
 
-CMD ["python", "flaskapp.py"]
+CMD python flaskapp.py $HOST_IP
