--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,21 @@ services:
       timeout: 10s
       retries: 5
 
+  nginx:
+    image: nginx:latest
+    container_name: nginx_web
+    volumes:
+      - ./nginx_conf/default.conf:/etc/nginx/conf.d/default.conf
+    ports: 
+      - 80:80
+    env_file: 
+      - .env
+    links: 
+      - create_user
+      - list_user
+    extra_hosts:
+      flaskapp: "${flaskapp}"
+
   mongodb:
     container_name: insert-mongodb
     image: mongo
