--- a/nginx_conf/default.conf
+++ b/nginx_conf/default.conf
@@ -8,11 +8,17 @@ server {
     location / {
         #root   /usr/share/nginx/html;
         #index  index.html index.htm;
-        proxy_pass http://flaskapp:5000/;
+        proxy_pass http://flaskapp:5001/;
+    }
+
+    location /register {
+        #root   /usr/share/nginx/html;
+        #index  index.html index.htm;
+        proxy_pass http://flaskapp:5000/register;
     }
 
     location /get {
-        proxy_pass http://flaskapp:5001/;
+        proxy_pass http://flaskapp:5001/listuser;
     }
     #error_page  404              /404.html;
 
