--- a/nginx_conf/default.conf
+++ b/nginx_conf/default.conf
@@ -17,6 +17,12 @@ server {
         proxy_pass http://flaskapp:5000/register;
     }
 
+    location /insert{
+        #root   /usr/share/nginx/html;
+        #index  index.html index.htm;
+        proxy_pass http://flaskapp:5000/insert;
+    }
+
     location /get {
         proxy_pass http://flaskapp:5001/listuser;
     }
